Offset thicker TOC border on hover with right margin to prevent text wrapping

--- a/source/stylesheets/components/_sidebar.scss
+++ b/source/stylesheets/components/_sidebar.scss
@@ -111,7 +111,7 @@ ol.toc-level-1 {
 
   li {
     border-left: 3px solid transparent;
-    transition: border-width $duration;
+    transition: border-width $duration, margin-right $duration;
 
     &.selected,
     &:hover {
@@ -120,6 +120,7 @@ ol.toc-level-1 {
 
     &:hover {
       border-left-width: 6px;
+      margin-right: -3px;
     }
   }
 
